# monkey-type-cli

./: README.md  pyproject.toml
src/monkeytype/: __init__.py  __main__.py  cli.py  content.py  engine.py  input.py  menu.py  render.py  results.py  stats.py  theme.py
src/monkeytype/data/: excerpts.txt  quotes.json
tests/: test_content.py  test_engine.py  test_input.py
