[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monkeytype-cli"
version = "0.1.0"
description = "A terminal typing test inspired by MonkeyType"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "plotext>=5.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
monkeytype = "monkeytype.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/monkeytype"]

[tool.hatch.build.targets.wheel.force-include]
"src/monkeytype/data" = "monkeytype/data"
